--- a/api.css
+++ b/api.css
@@ -177,15 +177,33 @@ h1{
    margin-top: 10px;
    font-size: large;
    font-weight: bolder;
+  
+   border-radius: 8px;
+   border: black;
+   border-style: solid;
+   border-width: 1px;
  }
 
 #fetchUserDataBtn{
- margin-right: 200px;
+ margin-top: 10px;
 
  
 }
-#filter{
-  
+
+
+#container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+ 
 }
+
+p{
+  color: rgb(131, 131, 131);
+  font-size: small;
+}
+
 
   
