--- a/api.css
+++ b/api.css
@@ -182,6 +182,7 @@ h1{
    border: black;
    border-style: solid;
    border-width: 1px;
+   list-style: none;
  }
 
 #fetchUserDataBtn{
@@ -199,11 +200,25 @@ h1{
   align-items: center;
  
 }
+a{
+  list-style: none;
+}
 
-p{
+h4{
   color: rgb(131, 131, 131);
   font-size: small;
+  list-style: none;
 }
+#myInput{
+  border-radius: 12px;
+  padding: 5px;
+  margin-right: -12px;
+}
+#fetchUserDataBtn{
+  border-radius: 12px;
+  
+}
+
 
 
   
